2004-11-29  Mark D. Baushke  <mdb@cvshome.org>

	* rcs.c (RCS_setlocalid): Do more configuration validation.
	Include some gratuitous reformatting.
	* sanity.sh (keywordexpand): Add tests for new validation code.

2004-11-24  Derek Price  <derek@ximbiot.com>

	* server.c (become_proxy): Note assumptions about syncronized primary
	and secondary versions with `FIXME?' note.

2004-11-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (info): Ignore comments in verifymsg test.

2004-11-22  Mark D. Baushke  <mdb@cvshome.org>

	* mkmodules.c (loginfo_contents, verifymsg_contents,
	commitinfo_contents, taginfo_contents, preproxy_contents,
	postadmin_contents, postproxy_contents, posttag_contents,
	postwatch_contents, notify_contents): Add comments regarding the
	additional format strings that are available. Include some
	gratuitous reformatting.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* subr.c (Xasnprintf): Improve header comment block.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* root.c (normalize_cvsroot): Improve header comment block.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* server.c: Misc reformatting and comment corrections.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* cvs.h (hostname): Redeclare as pointer rather than array.
	* main.c: Include xgethostname.h.  Declare server_hostname.
	(main): Use xgethostname().  Set server_hostname.
	* server.c (MAXHOSTNAMELEN): Remove this macro.
	(isThisHost): Reference global HOSTNAME rather than looking it up.
	Improve header comment block.
	(gserver_authenticate_connection): Likewise.
	(serve_command_prep): Correct comment.
	(serve_hostname): Don't bother to validate hostname length.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* server.c (isThisHost): strcasecmp before consulting the DNS as an
	optimization.

2004-11-18  Mark D. Baushke  <mdb@cvshome.org>

	* checkout.c (checkout_proc): Passing the repository to
	tag_check_valid seems to stop the assertion failure in recurse.c
	do_recursion.